[package]
name = "packets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocks = { path = "../../cocoabeans-generators/out/blocks" }
registries = { path = "../../cocoabeans-generators/out/registries" }
math = { path = "../math" }

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
hematite-nbt = "0.5.2"
byteorder = "1.4.3"
