[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
bytes = "1.1.0"
aes = "0.8.1"
rsa = "0.6.1"
generated = { path = "../generated" }
macros = { path = "../macros" }
nbt = { path = "../nbt" }
