[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocks = { path = "../../cocoabeans-generators/out/blocks" }
registries = { path = "../../cocoabeans-generators/out/registries" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
hematite-nbt = "0.5.2"
bytes = "1.1.0"
byteorder = "1.4.3"
aes = "0.8.1"
rsa = "0.6.1"
math = { path = "../math" }
num-traits = "0.2.15"
num-derive = "0.3.3"
