[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = "1.0.136"
#serde_json = "1.0.79"
#bitflags = "1.3.2"
#bytes = "1.1.0"
#mio = "0.8.2"
#prost = "0.10.1"
#rand = "0.8.5"
entities = { path = "../entities" }
protocol = { path = "../protocol" }
world = { path = "../world" }

serde_json = "1.0.81"
