[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
protocol = { path = "../protocol" }
world = { path = "../world" }

#serde = "1.0.137"
serde_json = "1.0.81"
#rand = "0.8.5"
